.metadata/.plugins/org.eclipse.cdt.ui/NBody.build.log
17:11:32 **** Build of configuration Debug for project NBody ****
make all 
Building file: ../body.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/x86_64-linux-gnu/qt5/QtGui -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"body.d" -MT"body.o" -o "body.o" "../body.cpp"
In file included from /usr/include/x86_64-linux-gnu/qt5/QtCore/qmath.h:41:0,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/QtMath:1,
                 from ../body.cpp:8:
/usr/include/x86_64-linux-gnu/qt5/QtCore/qglobal.h:1067:4: error: #error "You must build your code with position independent code if Qt was built with -reduce-relocations. " "Compile your code with -fPIC (-fPIE is not enough)."
 #  error "You must build your code with position independent code if Qt was built with -reduce-relocations. "\
    ^
subdir.mk:29: recipe for target 'body.o' failed
make: *** [body.o] Error 1

17:11:33 Build Finished (took 521ms)

